Separated css and js files from html file

--- a/templates/success.html
+++ b/templates/success.html
@@ -4,83 +4,7 @@
 <head>
 	<title>Youtube Video Downloader!</title>
 	<link rel="icon" href="images.jpg">
-	<style>
-
-		body {
-			background-color:#333333;
-			color:white;
-		}
-		#titl{
-			background-color:black;
-			text-align:center;
-			color:#33FFFF;
-			font-family:ar bonnie;
-			font-size:60px;
-		}
-
-		#face{
-			position:absolute;
-			top:100px;
-			left:600px;
-			text-align:center;
-			color:#66FFFF;
-			font-family:Segoe Print;
-			font-size:80px;
-		}
-
-		#tag{
-			position:absolute;
-			top:250px;
-			left:590px;
-			text-align:right;
-			color:#66FFFF;
-			font-family:Segoe Print;
-			font-size:20px;
-		}
-
-		#designer{
-			position:absolute;
-			top:93%;
-			left:43%;
-			color:white;
-			text-align:center;
-			font-size:13px;
-			font-family:Californian FB;
-		}
-
-
-		#instr{
-			padding:20px;
-			background-color:#FF6600;
-			border-radius: 15px;
-			border: 3px solid white;
-			position:absolute;
-			top:350px;
-			left:300px;
-			color:white;
-			font-size: 20px;
-			font-family:Maiandra GD;
-		}
-
-		#lside{
-			position:absolute;
-			left:0;
-			top:0;
-			height:100%;
-			width:200px;
-			background-color:black;
-		}
-
-		#rside{
-			position:absolute;
-			right:0;
-			top:0;
-			height:100%;
-			width:200px;
-			background-color:black;
-		}
-
-	</style>
+	ink rel= "stylesheet" type= "text/css" href= "/main.css">
 </head>
 
 <body>
