separated css and js files from html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 <html>
 <head>
 	<title>Youtube Video Downloader!</title>
-	link rel= "stylesheet" type= "text/css" href= "/main.css">
+	<link rel= "stylesheet" type= "text/css" href= "main.css">
 	<link rel="icon" href="images.jpg">
+	<script type="text/javascript" src="main.js"></script>
 </head>
 
 <body>
